# VVP

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
config/: config.yaml  test.yaml
docs/: development_setup.md
include/VisualVerticalEstimator/: constants.h  hog_calculator.h  orientation.h  utils.h  video_processor.h  visualization.h  vve.h
include/visual_vertical/: IOHandler.hpp  ImageProcessor.hpp  Types.hpp  VVEstimator.hpp
include/visual_vertical/utils/: Helpers.hpp
include/vvp/estimation/: Types.h  Types.hpp  VVEstimator.h  VVEstimator.hpp
include/vvp/fps/: FPSCounter.h  FPSCounter.hpp
include/vvp/io/: IOHandler.h  IOHandler.hpp
include/vvp/processing/: ImageProcessor.h  ImageProcessor.hpp
include/vvp/utils/: ConfigLoader.h  ConfigLoader.hpp  Helpers.h  Helpers.hpp
src/: CMakeLists.txt  hog_calculator.cpp  main.cpp  orientation.cpp  utils.cpp  video_processor.cpp  visualization.cpp
src/core/: IOHandler.cpp  Types.cpp
src/estimation/: Types.cpp  VVEstimator.cpp
src/fps/: FPSCounter.cpp
src/io/: IOHandler.cpp
src/processing/: ImageProcessor.cpp
src/utils/: ConfigLoader.cpp  Helpers.cpp
src/visual_vertical/: ImageProcessor.cpp  VVEstimator.cpp
tests/: CMakeLists.txt  test_image_processor.cpp  test_vv_estimator.cpp
